Profile and Tournament page horizontal scrollbar fix

--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,4 +1,4 @@
-﻿/*Searchbar*/
+/*Searchbar*/
 #searchBar {
     width: 90%;
     margin-left: 10px;
@@ -14,10 +14,10 @@
     height: 40px;
 }
 
-#searchedUser{
+#searchedUser {
     display: none;
     position: fixed;
-    z-index: 10; 
+    z-index: 10;
 }
 
 .panel-body{
@@ -76,12 +76,12 @@ p.elementStats {
 }
 
 .list-group {
+    width: 200%;
     max-height: 300px;
-    width: 500px;
     margin-top: -15px;
     margin-left: -5px;
     margin-bottom: 10px;
-    overflow-y : scroll;
+    overflow-y: scroll;
     /*overflow: scroll;*/
     /*webkit-overflow-scrolling: touch;*/
 }
@@ -112,6 +112,6 @@ hr {
     background: #333;
     margin-top: 10px;
     /*Makes it so that hr covers the hole page horizontally*/
-    margin-left: -100px;
-    margin-right: -100px;
+    margin-left: -5px;
+    margin-right: 0x;
 }
